--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Whatsapp</h3>
-		            <p><a href="tel://082126804623">+ 62 821 2680 4623</a></p>
+		            <p><a href="https://api.whatsapp.com/send?phone=6282126804623">Send Message Now</a></p>
 		          </div>
 	          </div>
           </div>
